--- a/Project/src/components/app/App.css
+++ b/Project/src/components/app/App.css
@@ -1,3 +1,8 @@
+html,body{
+  height: 100%;
+  width: 100%
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +40,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.TitleText {
+  font-size: 32px;
 }
