--- a/Project/src/components/app/App.css
+++ b/Project/src/components/app/App.css
@@ -42,6 +42,27 @@ html,body{
   }
 }
 
+.page{
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.mainContainer{
+  width: 85%;
+  height: 100%;
+  background-color: #F0EFF4;
+  padding: 20px;
+  padding-left: 48px;
+}
+
 .TitleText {
   font-size: 32px;
+  font-weight: 500;
+  padding-bottom: 16px;
+}
+
+.SecondaryText{
+  font-size: 20px;
+  font-weight: 500;
 }
