--- a/Project/src/views/sideBar.css
+++ b/Project/src/views/sideBar.css
@@ -10,9 +10,30 @@
     display: flex; 
     flex-direction: column; 
     align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 .sideBarButton{
-    width: 60%;
-    text-align: center;
+    display: flex;
+    width: 100%;
+    border: 0;
+    background-color:#ffffff;
+}
+
+.sideBarButton:hover{
+    background-color: #D5D5D5;
+}
+
+.descriptionContainer{
+    text-align: right;
+    padding-top: 24px;
+    align-self: start;
+    padding-bottom: 12px;
+    font-weight: bold;
+}
+
+.descriptionText{
+    align-self: center;
+    padding-left: 4px;
 }
