--- a/Project/src/components/app/App.css
+++ b/Project/src/components/app/App.css
@@ -59,6 +59,7 @@ html,body{
   background-color: #F0EFF4;
   padding: 20px;
   padding-left: 48px;
+  overflow: auto;
 }
 
 .TitleText {
@@ -90,3 +91,107 @@ html,body{
   background-color: #000;
   margin: 32px 0 48px 0;
 }
+
+.descriptionContainer{
+  text-align: right;
+  padding-top: 24px;
+  align-self: start;
+  padding-bottom: 12px;
+  font-weight: bold;
+}
+
+.descriptionTextSideBar{
+  align-self: center;
+  padding-left: 4px;
+}
+
+.space{
+  margin-top: 60px;
+}
+
+.reviewAddTextContainer{
+  width: 90%;
+  height: 140px;
+  border-radius: 5px;
+  text-align: start;
+  resize: none;
+}
+
+.reviewAddContainer{
+  padding-top: 20px ;
+}
+
+.reviewItem {
+  padding: 10px 0;
+}
+
+.reviewItemHeader {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.descriptionTextContainer {
+  display: flex;
+  align-items: center;
+}
+
+.descriptionText {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.reviewItemContent {
+  font-size: 1rem;
+}
+
+.reviewSeparator {
+  border: none;
+  border-top: 2px solid #000;
+  margin: 20px 0;
+}
+
+.movieForm {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+.formTitle {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.formLabel {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+.formInput {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-top: 5px;
+  font-size: 1em;
+}
+
+.formInput::placeholder {
+  color: #999;
+}
+
+.submitButton {
+  padding: 10px 15px;
+  color: #fff;
+  background-color: #333;
+  border: none;
+  border-radius: 4px;
+  font-size: 1em;
+}
+
